feat: add get all hotels woth filter and pagination
